<resources>
    <string name="app_name">MyLogger</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>


    <string name="base_url">http://192.168.1.231:8080/MyLogger/</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register1</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- login1 -->
    <string name="login1_label">登录</string>
    <string name="login1_username">用户名</string>
    <string name="login1_password">密码</string>
    <string name="login1_btn_login">登录</string>
    <string name="login1_logging_in">正在登陆...</string>
    <string name="login1_error_username_empty">用户名不能为空</string>
    <string name="login1_error_password_empty">密码不能为空</string>
    <string name="login1_error_password_length_range">密码长度必须是2至16个字符</string>
    <string name="login1_error_username_format">用户名必须是手机号或邮箱格式</string>


</resources>
