<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="loginViewModel"
            type="org.bill.logger.viewmodel.LoginViewModel"/>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.Login1Activity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="?android:attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/login1_label"/>

        </android.support.design.widget.AppBarLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login1_username"
                        android:text="root"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:hint="@string/login1_password"
                        android:inputType="textPassword"
                        android:imeOptions="actionGo"
                        android:text="888888"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>
                <!--android:textAllCaps="false"-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="20dp">


                    <LinearLayout
                        android:id="@+id/loading_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/image_view_refreshing"
                            android:layout_width="30dip"
                            android:layout_height="30dip"
                            android:src="@drawable/refreshing"
                            android:background="@android:color/transparent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login1_logging_in"
                            android:layout_marginLeft="5dp"
                            android:textColor="@android:color/white"/>

                    </LinearLayout>


                    <!-- ?android:attr/selectableItemBackground  右边界的水纹效果 -->
                    <!--android:onClick="@{loginViewModel.login}"-->
                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:text="@string/login1_btn_login"
                        android:background="?android:attr/selectableItemBackground"
                        android:textColor="@android:color/white" />


                </RelativeLayout>


            </LinearLayout>

        </ScrollView>

    </android.support.constraint.ConstraintLayout>

</layout>
